erDiagram
  USERS ||--o{ DEVICES : owns
  USERS ||--|| EMERGENCY_PROFILES : has
  USERS ||--o{ EMERGENCY_CONTACTS : defines
  USERS ||--o{ EMERGENCY_CASES : triggers
  EMERGENCY_CASES ||--o{ CASE_LOCATIONS : contains
  EMERGENCY_CASES ||--o{ TRIAGE_SUBMISSIONS : contains
  EMERGENCY_CASES ||--o{ CASE_STATUS_HISTORY : tracks
  EMERGENCY_CASES ||--o{ VIDEO_SESSIONS : has
  EMERGENCY_CASES ||--o{ MEDIA_ASSETS : stores
  EMERGENCY_CASES ||--o{ DISPATCH_ASSIGNMENTS : dispatches
  EMERGENCY_CASES ||--o{ HANDOVERS : produces
  EMERGENCY_CASES ||--o{ NOTIFICATION_DELIVERIES : emits
  SERVICE_AREAS ||--o{ MEDICAL_FACILITIES : includes
  SERVICE_AREAS ||--o{ AMBULANCE_UNITS : covers
